--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,6 +44,20 @@
             </a>
             </header>
 
+            
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="alert alert-warning">
+                <ul class="flashes">
+                {% for message in messages %}
+                  <li>{{ message }} </li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+            {% endwith %}
+            
+
             {% block content %}
             {% endblock %}
 
