--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,6 +44,12 @@
             </a>
             </header>
 
+            {% if current_user.is_authenticated %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
+            <a href="{{ url_for('login') }}">Login</a>
+            {% endif %}
+
             
             {% with messages = get_flashed_messages() %}
             {% if messages %}
